--- a/libs/css/style.css
+++ b/libs/css/style.css
@@ -1,137 +1,147 @@
-*{
-    margin: 0px;
-    padding:0px;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: sans-serif;
-    font-size:14px;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: sans-serif;
+  font-size: 14px;
 }
-body{
-    width:100%;
-    background-color: rgb(243, 243, 243);
-    margin: 0;
-    padding:0;
-    display: flex;
-    justify-content: center;
+body {
+  width: 100%;
+  background-color: rgb(243, 243, 243);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
-.instagram-wrapper{
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    margin-top:5%;
+.instagram-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5%;
 }
-.instagram-phone{
-    display:flex;
-    align-items:center;
-    justify-content:center;
+.instagram-phone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.instagram-phone img{
-   display:flex;
-   
+.instagram-phone img {
+  display: flex;
 }
-.instagram-continue{
-    display:flex;
-    align-items:center;
-    justify-content: space-around;
-    flex-direction: column;
-    width:30rem;
-    min-height:34rem;
-
+.instagram-continue {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  width: 30rem;
+  min-height: 34rem;
 }
-.group{
-    display: flex;
-    justify-content:space-around;
-    align-items:center;
-    flex-direction:column;
-    background-color:#ffffff;
-    width:100%;
-    padding:1.3rem 0;
-    
+.group {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  background-color: #ffffff;
+  width: 100%;
+  padding: 1.3rem 0;
 }
-.group img{
-    height: 3.5rem;
+.group img {
+  height: 3.5rem;
 }
-.group:nth-child(1){
-min-height: 19rem;
+.group:nth-child(1) {
+  min-height: 19rem;
 }
-.instagram-logo{
-    height: 3rem;
+.instagram-logo {
+  height: 3rem;
 }
-.profile-photo{
-    display:flex;
-    justify-content:center;
-    align-items: center;
-    border-radius: 50%;
-    overflow: hidden;
+.profile-photo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  overflow: hidden;
 }
-.profile-photo img{
-    height: 6rem;
-   
+.profile-photo img {
+  height: 6rem;
 }
-.instagram-login{
-    background-color:#0B95f8;
-    color: #ffffff;
-    padding: 8px;
-    border-radius: 4px;
-
+.instagram-login {
+  background-color: #0b95f8;
+  color: #ffffff;
+  padding: 8px;
+  border-radius: 4px;
 }
-.instagram-logout{
-    color:#0B95f8;
-    margin-top:1rem;
+.instagram-logout {
+  color: #0b95f8;
+  margin-top: 1rem;
 }
-.not-account{
-    color:rgb(100, 100, 100);
+.not-account {
+  color: rgb(100, 100, 100);
 }
-.link-blue{
-    color:#0B95f8;
+.link-blue {
+  color: #0b95f8;
 }
-.get-the-app{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content: center;
-    width: 100%;
-    padding:1.3rem 0;
+.get-the-app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 1.3rem 0;
 }
-.download{
-    display:flex;
-    width:100%;
-    justify-content:space-evenly;
-    align-items:center;
-    padding:1rem;
+.download {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1rem;
 }
-.app-download{
-    height:3rem;
-    width:10rem;
-    background-size: cover;
+.app-download {
+  height: 3rem;
+  width: 10rem;
+  background-size: cover;
 }
 
-.app-download:nth-child(1){
-    background-image: url(https://logodownload.org/wp-content/uploads/2017/05/disponivel-na-app-store-botao-1.png);
+.app-download:nth-child(1) {
+  background-image: url(https://logodownload.org/wp-content/uploads/2017/05/disponivel-na-app-store-botao-1.png);
 }
-.app-download:nth-child(2){
-    background-image: url(https://logodownload.org/wp-content/uploads/2017/04/disponivel-google-play-badge-1.png);
+.app-download:nth-child(2) {
+  background-image: url(https://logodownload.org/wp-content/uploads/2017/04/disponivel-google-play-badge-1.png);
 }
-.container{
-    display:flex;
-    flex-direction:column;
-    width:100%;
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
-footer{
-    text-decoration:none;
-    text-align:center;
-    width:100%;
+footer {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.container-footer {
+  width: 50%;
 }
 
+.container-footer ul {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+}
+.container-footer ul li {
+  display: flex;
+  flex-wrap: wrap;
+  padding:5px;
+  text-decoration: none;
+  font-size:10px;
 
-@media (max-width:768px){
-    body{
-        background-color:white;
-    }
-   
-    .instagram-phone{
-        display: none;
-    }
-    
+}
 
+@media (max-width: 768px) {
+  body {
+    background-color: white;
+  }
+
+  .instagram-phone {
+    display: none;
+  }
 }
