--- a/libs/css/style.css
+++ b/libs/css/style.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   text-decoration: none;
   font-family: sans-serif;
-  font-size: 14px;
 }
 body {
   width: 100%;
@@ -19,6 +18,8 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 5%;
+  font-size: 14px;
+
 }
 .instagram-phone {
   display: flex;
@@ -35,6 +36,8 @@ body {
   flex-direction: column;
   width: 30rem;
   min-height: 34rem;
+  font-size: 14px;
+
 }
 .group {
   display: flex;
@@ -58,6 +61,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width:100px;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -116,24 +120,36 @@ footer {
   text-align: center;
   display: flex;
   justify-content: center;
-  width: 100%;
-}
-.container-footer {
-  width: 50%;
+  flex-direction:column;
+  margin-top:20px;
 }
 
-.container-footer ul {
+footer ul {
   display: flex;
   justify-content: center;
   list-style-type: none;
+  flex-wrap:wrap;
 }
-.container-footer ul li {
+footer ul li {
   display: flex;
   flex-wrap: wrap;
-  padding:5px;
-  text-decoration: none;
-  font-size:10px;
+  padding:4px;
+  color:white;
 
+}
+
+footer .idioma{
+  margin-top:10px;
+
+}
+footer a{
+  color:gray;
+  font-size:12px;
+  text-decoration: none;
+
+}
+footer a:hover{
+  text-decoration:underline;
 }
 
 @media (max-width: 768px) {
